Bug 124794 - Installation fails on Windows Server 2008 R2
Summary: Installation fails on Windows Server 2008 R2
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
6.2.3.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
: 124869 (view as bug list)
Depends on:
Blocks: Installer-Windows
  Show dependency treegraph
 
Reported: 2019-04-17 13:09 UTC by Eugene Kin
Modified: 2019-05-08 17:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibO Setup 6.2.3.2 (363.06 KB, application/octet-stream)
2019-04-17 13:09 UTC, Eugene Kin
Details
LibO Setup 6.2.3.1 (719.28 KB, application/octet-stream)
2019-04-17 13:09 UTC, Eugene Kin
Details
LibO Setup 6.2.2.2 (362.82 KB, application/octet-stream)
2019-04-17 13:10 UTC, Eugene Kin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Kin 2019-04-17 13:09:08 UTC
Created attachment 150820 [details]
LibO Setup 6.2.3.2

Installation process fails on Windows Server 2008 R2.

InstallMSU: Obtained WU service handle
InstallMSU: Service status is SERVICE_RUNNING
InstallMSU: Service status is SERVICE_RUNNING
InstallMSU: Successfully sent SERVICE_CONTROL_STOP code to Windows Update service
InstallMSU: Service configuration is unchanged
InstallMSU: Is Wow64 Process: NO
InstallMSU: Prepared wusa path: C:\Windows\system32\wusa.exe
InstallMSU: Prepared wusa command: "C:\Windows\system32\wusa.exe" "C:\Users\3E96~1.DUN\AppData\Local\Temp\TMPCE75.tmp" /quiet /norestart
InstallMSU: CreateProcessW succeeded
InstallMSU: Execution of wusa.exe failed with Win32 error code 0x80080005!

Why it stopping WU service?

Issue is reproduced with LibO 6.2.3.1 and 6.2.3.2

No such problems on previous LibO versions till 6.2.2.2

No problems on Windows 7 with LibO 6.2.3.1 and 6.2.3.2
Comment 1 Eugene Kin 2019-04-17 13:09:40 UTC
Created attachment 150821 [details]
LibO Setup 6.2.3.1
Comment 2 Eugene Kin 2019-04-17 13:10:05 UTC
Created attachment 150822 [details]
LibO Setup 6.2.2.2
Comment 3 Mike Kaganski 2019-04-20 20:02:54 UTC
(In reply to Eugene Kin from comment #0)
> Why it stopping WU service?

because of the fix to bug 123832.

Could you please try stopping WU service, and start installation with the service stopped? That log could help understand the issue. Thanks.
Comment 4 Mike Kaganski 2019-04-21 19:36:29 UTC
I have obtained the logs from https://forumooo.ru/index.php/topic,7639 (Rus). Taking.
Comment 5 Mike Kaganski 2019-04-21 19:43:46 UTC
https://gerrit.libreoffice.org/71045
Comment 6 Commit Notification 2019-04-22 02:24:21 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/bb6906b66d7ceac8465b43d7e2b1f05976d43600%5E%21

tdf#124794: Wait for WU service stopped before launching wusa.exe

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Eugene Kin 2019-04-22 07:15:49 UTC
Thank you.

Waiting for new daily build.


I've tested old ones

https://dev-builds.libreoffice.org/daily/libreoffice-6-2/Win-x86_64@42/current/libo-62-64~2019-04-15_23.30.38_LibreOfficeDev_6.2.4.0.0_Win_x64.msi

and

https://dev-builds.libreoffice.org/daily/master/Win-x86_64@42/current/libo-master64~2019-04-16_03.05.57_LibreOfficeDev_6.3.0.0.alpha0_Win_x64.msi

and was able to install both without any issue (logs are usesless, there are no any MSU sections).

Weird, isn't it?
Comment 8 Mike Kaganski 2019-04-22 07:19:41 UTC
(In reply to Eugene Kin from comment #7)
> Waiting for new daily build.

Unfortunately, dailies are not useful here, because they are built without UCRT MSUs part... which is why

> logs are usesless, there are no any MSU sections

Possibly I need to ask maintainers of the dailies to include MSUs there. Likely insufficient pre-release testing is largely due to this.
Comment 9 Mike Kaganski 2019-04-22 12:06:28 UTC
*** Bug 124869 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2019-04-25 11:01:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/1151e8fe6c8061f8b9c4777fba9665464ab5b5b8%5E%21

tdf#124794: Wait for WU service stopped before launching wusa.exe

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Mike Kaganski 2019-05-03 08:43:50 UTC
Now the dailies from Win-x86@42/ or Win-x86_64@42/ should contain the MSUs, allowing to test this (I hope).
Comment 12 Eugene Kin 2019-05-08 17:39:05 UTC
LibO 6.2.4.1 - test passed
I've tested several times, all installations are successful.
Thanks a lot Mike.