tdf#124794: Wait for WU service stopped before launching wusa.exe

It seems that wusa.exe would fail with error code 0x80080005
if launched too soon after WU service was sent a stop control
(which was added in tdf#123832).

Change-Id: I470a8a8e933e8a0cd6208c095ed63c1761b3b434